# KnowThyPackets

./: .gitignore  README.md  SFTPCapture.pcapng  dns_next_talks.pcapng
asciinema/: next_talks.cast  now_talks.cast  track1.cast
dns_schedule/: implementation_plan.md  schedule.json
dns_schedule/src/: dns_server.py  pyproject.toml  server.cast
inpycon25_dns/: implementation_plan.md  pycon_india_2025_schedule.json
inpycon25_dns/src/: demo.cast  dig_client.cast  dns_server.py
packets/: FTPCapture.pcapng  HTTPCapture.pcapng  HTTPSCapture.pcapng  HTTPSCaptureOriginal.pcapng  NextTalks.pcapng  NowTalks.pcapng  SSHCapture.pcapng  TelnetCapture.pcapng  TelnetFTPCapture.pcapng  dns_now_talks.pcapng  tcp_rst.pcapng
schedule_extractor/: README.md  Schedule _ 12th - 15th September.htm  convert_to_json.py  extract_schedule.py  pyproject.toml
schedule_extractor/Schedule _ 12th - 15th September_files/: css2.css  page.css  schedule.js
schedule_extractor/extracted_divs/: div_2.html  div_3.html
